--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
 04-02-Mastering-Generics-Exercises/out/demo-generics.js.map
 04-02-Mastering-Generics-Exercises/out/demo-generics.js
 04-02-Mastering-Generics-Exercises/demo-generics.ts
+*.code-profile
