--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,9 @@
 *.js
 EXAM-15-12-2025/EXAM/.vscode/launch.json
 EXAM-15-12-2025/EXAM/package.json
+*.zip
+EXAM-15-12-2025/EXAM/tsconfig.json
+EXAM-15-12-2025/EXAM/tsconfig.json
+/EXAM-15-12-2025/Homework-KapkaKaloyanova-Retake Exam
+EXAM-15-12-2025/EXAM/tsconfig.json
+EXAM-15-12-2025/tsconfig.json
